# fastcgi-client-rs

./: .gitignore  .licenserc.yaml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  release-plz.toml  rust-toolchain.toml
.github/workflows/: license.yml  publish.yml  release-plz.yml  rust.yml
benches/: async_client_bench.rs  common.rs
docs/: _config.yml  index.html
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: README.md  axum_proxy_server.rs  smol_keep_alive.rs  smol_short_connection.rs  tokio_keep_alive.rs  tokio_short_connection.rs  tokio_stream_response.rs
src/: client.rs  conn.rs  empty.rs  error.rs  id.rs  io.rs  lib.rs  meta.rs  params.rs  request.rs  response.rs  stream.rs
tests/: async_client_post_test.rs  async_client_test.rs  client_get.rs  client_multi.rs  client_post.rs  client_post_test.rs  client_test.rs  common.rs
tests/php/: big-response.php  body-size.php  index.php  post.php
