# Copyright 2022 jmjoy
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fastcgi-client"
version = "0.10.0"
authors = ["jmjoy <jmjoy@apache.org>"]
edition = "2021"
description = "Fastcgi client implemented for Rust."
repository = "https://github.com/jmjoy/fastcgi-client-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["fastcgi", "fcgi", "client", "tokio", "php"]

[features]
default = ["smol"]
tokio = ["tokio/io-util", "tokio/sync", "tokio/time", "tokio-util/io"]
smol = ["dep:smol"]

[dependencies]
bytes = "1.10.1"
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
smol = { version = "2.0.2", optional = true, default-features = false}
thiserror = "1.0.32"
tokio = { version = "1.20.1", optional = true, default-features = false }
tokio-util = { version = "0.7.15", optional = true, default-features = false }
tracing = "0.1.36"

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol = { version = "2.0.2" }
smol-macros = "0.1.1"
smol-timeout = "0.6.1"
tokio = { version = "1.20.1", features = ["full"] }
tracing-subscriber = "0.3.15"
