# Copyright 2022 jmjoy
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fastcgi-client"
version = "0.10.0"
authors = ["jmjoy <jmjoy@apache.org>"]
edition = "2024"
description = "Fastcgi client implemented for Rust."
repository = "https://github.com/jmjoy/fastcgi-client-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["fastcgi", "fcgi", "client", "tokio", "php"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = []
runtime-tokio = ["dep:tokio", "dep:tokio-util"]
runtime-smol = ["dep:smol"]

[dependencies]
bytes = "1.11.1"
futures-core = { version = "0.3.32", default-features = false }
futures-io = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc", "std", "io"] }
smol = { version = "2.0.2", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util"], optional = true }
tokio-util = { version = "0.7.18", features = ["compat"], optional = true }
tracing = "0.1.44"

[dev-dependencies]
smol = "2.0.2"
tokio = { version = "1.50.0", features = ["full"] }
tracing-subscriber = "0.3.23"
